--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseurl = "https://example.com/"
-title = "console-demo"
+title = "Overshared"
 theme = "hugo-theme-console"
 languageCode = "en-us"
 
